--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,7 +9,7 @@
     font-family: $main-font;
     font-size: $main-font-size;
     line-height: 1.5;
-    padding: 0 1rem;
+    padding: 0;
     @media (min-width: $max-width) {
         padding: 0;
     }
