--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 
   .searchContainer {
     display: flex;
@@ -11,4 +11,16 @@
     width: 50%;
     margin: 2rem auto;
   }
+
+  .mainContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 2rem;
+  }
+  
+
 }
