--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -16,6 +16,12 @@
         .name {
             text-align: left;;
         }
+
+        &.activeFilters {
+            background-color: rgba($primary, 0.1);
+            border-radius: 8px;
+            padding: 8px;
+        }
     }
 
     .valuesContainer {
@@ -37,14 +43,75 @@
             cursor: pointer;
             list-style-type: none;
             line-height: 1.75rem;
+            border-radius: 8px;
+            padding-left: 0.5rem;
 
             &:hover {
-                color: $gray;
+                background-color: rgba($primary, 0.1);
+                color: $primary;
+            }
+
+            &.active {
+
+                .results {
+                    color: rgba($gray, 0.75);
+                }
+                
+                &:hover {
+                    background-color: transparent;
+                    color: unset;
+                    cursor: default;
+    
+                    .nameValue {
+                        cursor: default;
+                    }
+                }
+            }
+
+            .nameValue {
+                width: 100%;
+                cursor: pointer;
+                list-style-type: none;
             }
 
             .results {
                 color: rgba($gray, 0.4);
             }
         }
+
+        .activeFilterContainer {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+            color: rgba($gray, 0.8);
+            list-style-type: none;
+            line-height: 1.75rem;
+            border-radius: 8px;
+            padding-left: 0.5rem;
+
+            .deleteFilter {
+                display: inline-block;
+                width: 22px;
+                height: 22px;
+                background-image: url('/images/close.svg');
+                background-repeat: no-repeat;
+                background-size: cover;
+
+                &:hover {
+                    background-image: url('/images/close-hover.svg');
+                    cursor: pointer;
+                }
+              }
+        }
+    }
+
+    .separator {
+        width: 100%;
+        height: 1px;
+        border-color:rgba($light-gray, 0.2);
+        margin: 0.5rem 0;
     }
 }
