--- a/src/components/InputSearch/InputSearch.module.scss
+++ b/src/components/InputSearch/InputSearch.module.scss
@@ -3,14 +3,14 @@
 .wrapperSearch {
   width: 100%;
   display: flex;
-  column-gap: 8px;
+  column-gap: 0px;
 
   .input {
     position: relative;
     width: 100%;
     height: 40px;
     border: 1px solid $light-gray;
-    border-radius: 8px;
+    border-radius: 8px 0 0 8px;
     padding: 0 10px;
     font-size: 16px;
     background-color: $white;
@@ -30,7 +30,7 @@
     width: 40px;
     height: 40px;
     border: none;
-    border-radius: 8px;
+    border-radius: 0 8px 8px 0;
     background-color: $primary;
     outline: none;
     cursor: pointer;
