--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,6 +1,7 @@
 @import '@styles/Variables.module.scss';
 
 .main {
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -10,6 +11,7 @@
     font-size: $main-font-size;
     line-height: 1.5;
     padding: 0;
+
     @media (min-width: $max-width) {
         padding: 0;
     }
