--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,6 +9,7 @@
   align-items: center;
   font-size: 1.5rem;
   font-weight: 700;
+  box-shadow: 0 2px 4px 0 rgba($black, 0.2);
 
   .brand {
     color: $white;
