--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-bottom: 5rem;
 
   .searchContainer {
     display: flex;
@@ -9,7 +10,7 @@
     align-items: center;
     justify-content: center;
     width: 50%;
-    margin: 2rem auto;
+    margin: 3rem auto 4rem;
   }
 
   .mainContainer {
@@ -19,7 +20,6 @@
     height: 100%;
     width: 100%;
     margin: 0 auto;
-    padding: 0 2rem;
   }
   
 
