--- a/src/components/InputSearch/InputSearch.module.scss
+++ b/src/components/InputSearch/InputSearch.module.scss
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     height: 40px;
-    border: 1px solid $light-gray;
+    border: 1px solid $secondary;
     border-radius: 8px 0 0 8px;
     padding: 0 10px;
     font-size: 16px;
@@ -18,8 +18,13 @@
     outline: none;
     transition: all 0.3s;
 
+    &::placeholder {
+      color: rgba($gray, 0.45);
+      font-weight: 300;
+    }
+
     &:focus {
-      border-color: $secondary;
+      border-color: $primary;
     }
   }
 
@@ -48,4 +53,11 @@
       background-size: cover;
     }
   }
+}
+
+.error {
+  margin: 5px 0;
+  font-size: 0.95rem;
+  color: $gray;
+  text-align: center;
 }
