--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -16,6 +16,22 @@
         box-shadow: 0 2px 4px 0 rgba($primary, 0.2);
     }
 
+    .cardImage {
+        width: 100px;
+        height: 100px;
+        background-color: rgba($gray, 0.1);
+
+        .noImage {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            font-size: 1.5rem;
+            color: rgba($gray, 0.5);
+        }
+    }
+
     .cardContent {
         display: flex;
         flex-direction: column;
