--- a/src/components/InputSearch/InputSearch.module.scss
+++ b/src/components/InputSearch/InputSearch.module.scss
@@ -1,4 +1,5 @@
 @import '@styles/Variables.module.scss';
+@import '@styles/Breakpoints.module.scss';
 
 .wrapperSearch {
   width: 100%;
@@ -51,6 +52,10 @@
       background-image: url('/images/search.svg');
       background-repeat: no-repeat;
       background-size: cover;
+    }
+
+    @include media('mobile') {
+      width: 60px;
     }
   }
 }
