--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,4 +1,5 @@
 @import '@styles/Variables.module.scss';
+@import '@styles/Breakpoints.module.scss';
 
 .modal {
   display: none;
@@ -58,6 +59,10 @@
       font-size: 1.5rem;
       font-weight: 600;
       margin-bottom: 1rem;
+    }
+
+    @include media('mobile') {
+      max-width: 92%;
     }
   }
 }
