--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,4 +1,5 @@
 @import '@styles/Variables.module.scss';
+@import '@styles/Breakpoints.module.scss';
 
 .pagination {
   display: flex;
@@ -51,5 +52,9 @@
       background-color: rgba($primary, 0.2);
       color: $primary;
     }
+  }
+
+  @include media('laptop') {
+    margin: 0 0 1rem;
   }
 }
