--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,13 +1,35 @@
 @import '@styles/Variables.module.scss';
+@import '@styles/Breakpoints.module.scss';
 
 .sidebar {
     width: 20%;
     height: -webkit-fill-available;
     z-index: 100;
-    margin: 0 1rem;
+    margin-bottom: 3rem;
     padding: 1rem;
     background-color: rgba($light-gray, 0.1);
     border-radius: 8px;
     box-shadow: 0 1px 2px 0 rgba($gray, 0.2);
     transition: transform 0.3s ease-out;
+
+    @include media('tablet') {
+        width: 35%;
+        margin-bottom: 4rem;
+    }
+
+    @include media('mobile') {
+        display: none;
+
+        &.sideMenu {
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 60%;
+            height: auto;
+            background-color: $white;
+            border-radius: 8px 0 0 8px;
+            z-index: 1;
+        }
+    }
 }
