--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,10 +1,11 @@
 @import '@styles/Variables.module.scss';
+@import '@styles/Breakpoints.module.scss';
 
 .container {
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 
   .searchContainer {
     display: flex;
@@ -12,6 +13,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: calc(100vh - 120px);
     margin: 0 auto;
     padding: 4rem 5rem 5rem;
     background: $white;
@@ -21,6 +23,10 @@
       rgba($tertiary, 1) 70%,
       rgba($secondary, 1) 96%
     );
+
+      &.completed {
+        height: 100%;
+      }
 
     .title {
       font-size: 3rem;
@@ -45,8 +51,26 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    column-gap: 1rem;
     height: 100%;
     width: 100%;
     margin: 2rem auto;
+  }
+
+  @include media('tablet') {
+    margin-bottom: 0;
+
+    .searchContainer {
+      padding: 4rem 2rem 5rem;
+
+      .title {
+        font-size: 2.5rem;
+        line-height: 2.2rem;
+      }
+
+      .search {
+        width: 100%;
+      }
+    }
   }
 }
